# Lemon

./: '  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  install.py  premake5.lua  types.json  types2.json
Lemon/: CMakeLists.txt  Config.cmake.in  premake5.lua  types3.json
Lemon/_generated/: components.h  entity_components.json  entity_system.json  rendering_components.json  rendering_system.json  transform_components.json  transform_system.json  types.json
Lemon/include/assets/: asset.h  asset_loader.h  resource.h
Lemon/include/core/: assert.h  defines.h  hash_string.h  logger.h  pool_allocator.h  utils.h
Lemon/include/engine/: engine.h
Lemon/include/events/: events.h
Lemon/include/lemon/: engine.h  entry_point.h  game.h
Lemon/include/physics/: bvh_tree.h  sat_algorithm.h  shapes.h
Lemon/include/platform/: input.h  keycodes.h  window.h  window_events.h
Lemon/include/rendering/: animation.h  animation_script.h  basic_renderer.h  batch_renderer.h  framebuffer.h  gl_errors.h  renderer2d.h  rendering_context.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h
Lemon/include/scripting/: message_bus.h  script.h  script_entity.h  scripting_engine.h
Lemon/include/serialization/: basic_types_serializer.h  component_serializer.h  scene_serializer.h  serializer.h  system_serializer.h
Lemon/include/threading/: scheduler.h
Lemon/include/world/: entity.h  entity_registry.h  reflection.h  reflection2.h  scene.h  scene_manager.h  service_container.h  system.h
Lemon/include/world2/: component_pool.h  query.h  type_erased_array.h  world.h  world_primitives.h
Lemon/libs/: CMakeLists.txt  libraries.lua
Lemon/libs/glad/: CMakeLists.txt
Lemon/libs/lua/: CMakeLists.txt
Lemon/libs/stb/: CMakeLists.txt
Lemon/resources/shaders/: texture_shader.glsl  texture_shader.vs
Lemon/src/: CMakeLists.txt  engine.cpp  game.cpp
Lemon/src/assets/: CMakeLists.txt  asset.cpp  asset_loader.cpp  asset_storage.cpp  file.cpp  resource.cpp  resource_manager.cpp
Lemon/src/audio/: CMakeLists.txt  audio_file.cpp  audio_player.cpp  audio_system.cpp  sound.cpp  sound_context.cpp
Lemon/src/core/: CMakeLists.txt  logger.cpp  string_id.cpp
Lemon/src/editor_exports/: CMakeLists.txt  editor_exports.cpp
Lemon/src/engine/: engine.cpp
Lemon/src/event_system/: event_handler.cpp
Lemon/src/events/: CMakeLists.txt  event_handler.cpp  events.cpp
Lemon/src/game/: CMakeLists.txt  entity.cpp  object.cpp  scene.cpp  scene_manager.cpp  transform_system.cpp
Lemon/src/input/: CMakeLists.txt  input.cpp
Lemon/src/job_system/: CMakeLists.txt  job_system.cpp
Lemon/src/physics/: bvh_tree.cpp  sat_algorithm.cpp  shapes.cpp
Lemon/src/platform/: input.cpp  window.cpp
Lemon/src/renderer/: CMakeLists.txt  basic_renderer.cpp  batch_renderer.cpp  framebuffer.cpp  rendering_context.cpp  rendering_system.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
Lemon/src/rendering/: animation_script.cpp  basic_renderer.cpp  batch_renderer.cpp  framebuffer.cpp  rendering_context.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
Lemon/src/resources/: CMakeLists.txt  resource_manager.cpp
Lemon/src/scripting/: CMakeLists.txt  message_bus.cpp  script.cpp  script_entity.cpp  scripting_engine.cpp  scripting_system.cpp
Lemon/src/serialization/: CMakeLists.txt  basic_types_serializer.cpp  scene_serializer.cpp  serializer.cpp
Lemon/src/services/: CMakeLists.txt  services.cpp
Lemon/src/threading/: scheduler.cpp
Lemon/src/threads/: CMakeLists.txt  scheduler.cpp
Lemon/src/time/: CMakeLists.txt  clock.cpp
Lemon/src/window/: CMakeLists.txt  window.cpp
Lemon/src/world/: entity.cpp  entity_registry.cpp  scene.cpp  scene_manager.cpp
Lemon/src/world2/: world.cpp
Lemonade/: CMakeLists.txt
Lemonade/include/RiverEditor/: application.h  editor_system.h  editor_window.h
Lemonade/src/: application.cpp  editor_system.cpp  imgui.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h
Lemonade/src/scripts/: editor_camera_controller.cpp
Lemonade/tools/: CMakeLists.txt
Lemonade/tools/assetManager/: CMakeLists.txt
RiverEditor/: CMakeLists.txt
RiverEditor/include/RiverEditor/: application.h  editor_system.h  editor_window.h
RiverEditor/src/: application.cpp  editor_system.cpp  editor_window.cpp
RiverEditor/src/scripts/: editor_camera_controller.cpp
RiverEngine/: CMakeLists.txt
RiverEngine/src/: engine.cpp
RiverEngine/src/audio/: audio_file.cpp  sound_context.cpp
RiverEngine/src/core/: logger.cpp  string_id.cpp
RiverEngine/src/game/: object.cpp  scene.cpp  (+2 more)
Sandbox/: CMakeLists.txt  premake5.lua  sandbox.lmnproj  sandbox2.lmnproj  types.json  types1.json
Sandbox/_generated/: _components.h
Sandbox/assets/: assets.json
Sandbox/scenes/: sandbox1.json  sandbox2.json  sandbox3.json  sandbox_scene.json  sandbox_scene.lemon  sandbox_scene1.json  scene.lemon
Sandbox/src/: attack_system.cpp  attack_system.h  enemy_system.cpp  enemy_system.h  input_system.cpp  input_system.h  main.cpp  movement_system.cpp  movement_system.h  player_components.h
example/: CMakeLists.txt  assets.json  assets.xml  lemon.json  sandbox.cpp  sandbox.h
example/assets/: assets.json  mock_shader.glsl
example/scenes/: SandboxScene.json
example/src/: sandbox.cpp
modules/assets/: CMakeLists.txt
modules/audio/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/engine/: CMakeLists.txt
modules/physics/: CMakeLists.txt
modules/platform/: CMakeLists.txt
modules/rendering/: CMakeLists.txt
modules/scene/: CMakeLists.txt
modules/scripting/: CMakeLists.txt
modules/serialization/: CMakeLists.txt
modules/threading/: CMakeLists.txt
modules/world/: CMakeLists.txt
tests/: CMakeLists.txt  premake5.lua
tests/core/: hash_string_test.cpp  logger_test.cpp  pool_allocator_test.cpp
tests/events/: event_test.cpp  events_test.cpp
tests/physics/: bvh_test.cpp  sat_test.cpp
tests/threading/: scheduler_test.cpp
tests/world/: component_pool_test.cpp  type_erased_array_test.cpp  world_test.cpp
(+601 files in other folders)
