target_sources(lemon PRIVATE engine.cpp)

add_subdirectory(core)
add_subdirectory(services)
add_subdirectory(window)
add_subdirectory(time)
add_subdirectory(game)
add_subdirectory(input)
add_subdirectory(renderer)
add_subdirectory(job_system)
add_subdirectory(event_system)
add_subdirectory(resources)
add_subdirectory(audio)
add_subdirectory(scripting)
