target_sources(lemon PRIVATE engine.cpp game.cpp)

add_subdirectory(core)
add_subdirectory(services)
add_subdirectory(window)
add_subdirectory(time)
add_subdirectory(game)
add_subdirectory(input)
add_subdirectory(renderer)
add_subdirectory(threads)
add_subdirectory(events)
add_subdirectory(assets)
add_subdirectory(audio)
add_subdirectory(scripting)
